--- a/first_year.html
+++ b/first_year.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1st Year Subjects - R22 CSE & AIML</title>
-    <style>
+        <link rel="stylesheet" href=first_year.css">
 
-    </style>
+    
 </head>
 <body>
     <button class="back-btn" onclick="window.location.href='cse_aiml.html'">← Back to Years</button>
