--- a/second_year.html
+++ b/second_year.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2nd Year Subjects - R22 CSE & AIML</title>
-    <link rel="stylesheet" href=second_year.css">
+    <link rel="stylesheet" href="second_year.css">
 </head>
 <body>
     <button class="back-btn" onclick="window.location.href='cse_aiml.html'">← Back to Years</button>
